--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   go_router: ^14.6.1
+  shared_preferences: ^2.3.3
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
